[tool.poetry]
name = "typingx"
version = "0.6.0"
description = "Extend typing package functionalities"
authors = ["Eric Jolibois <em.jolibois@gmail.com>"]
license = "MIT"
repository = "https://github.com/PrettyWood/typingx"
homepage = "https://github.com/PrettyWood/typingx"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed"
]
include = ["typingx/py.typed"]

[tool.poetry.dependencies]
python = "^3.6.2"
typing_extensions = { version = "^4.0.1", python = "<3.9.2" }

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.920"
pre-commit = "^2.16.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
tox = "^3.24.4"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
line_length = 100
include_trailing_comma = true
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true

[tool.pytest.ini_options]
addopts = "--cov typingx --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
